# backend/app/Http/Resources/Transaction/Hosttohost/SearchResource.php
@@ -1,18 +1,0 @@
-<?php
-
-namespace App\Http\Resources\Transaction\Hosttohost;
-
-use Illuminate\Http\Request;
-use Illuminate\Http\Resources\Json\JsonResource;
-
-class SearchResource extends JsonResource
-{
-    public function toArray(Request $request): array
-    {
-        return [
-            "route"     => $this["route"],
-            "date"      => $this["date"],
-            "schedules" => ScheduleResource::collection($this["schedules"]),
-        ];
-    }
-}
